# Lol-stats

./: .gitignore  CMakeLists.txt  README.md  main.c
header/: display_html.h  league_player.h  stats.h  utility.h
src/: display_html.c  league_player.c  stats.c  utility.c
test-data/: data_200.txt  data_400.txt  matches.in  player_names.in  result.html  result.txt  testdata_12.txt  testdata_200.txt
